<resources>
    <string name="app_name">E-Learning</string>
    <string name="continue_btn">Continue</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        FCM registration token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>

    <string name="new_account">New Account</string>
    <string name="enter_your_email_address_below">Enter your email address below</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_login_details">Enter your login details to access your account</string>
    <string name="log_in">Log In</string>
    <string name="create_password">Create Password</string>
    <string name="enter_create_password">Your password must have at least 8 or more characters</string>
    <string name="weak">Weak</string>
    <string name="already_have_account_create_password">Already have an account?</string>
    <string name="sign_in_if_exists_create_password">SIGN IN</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter your moblie number to enable verification</string>
    <string name="verification">Verification</string>
    <string name="enter_phone_verification">Please enter code to verify your phone number</string>
    <string name="did_not_receive">I didn\'t receive</string>
    <string name="resend_verification">RESEND</string>
    <string name="english_lan">En</string>
    <string name="vietnamese_lan">Vi</string>
    <string name="enter_email_field_log_in">Your Email</string>
    <string name="enter_password_field">Your password</string>
    <string name="enter_phone_number_field">Your phone number</string>
    <string name="creating_dialog">"Creating account"</string>
    <string name="title">Elearning Platform</string>
    <string name="desc">Contrary to popular belief. lorem ipsum is not a random text</string>
    <string name="title2">Be Focus</string>
    <string name="desc2">To achieve success in your life. Learn now</string>
    <string name="title3">Professional</string>
    <string name="desc3">Most courses are from top lectures. Learn faster</string>
    <string name="btnGetStarted">Skip</string>
    <string name="next">Next</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="top_courses_in">Top course in </string>
    <string name="see_all">See All</string>
    <string name="design_icon">Design</string>
    <string name="code_icon">Code</string>
    <string name="business_icon">Business</string>
    <string name="photograph_icon">Photograph</string>
    <string name="title_home1">Your course to success</string>
    <string name="title_home2">Grow your ability</string>
    <string name="title_home3">Save your time</string>
    <string name="title_home4">Get your dream job</string>
    <string name="title_home5">Sale up to 70%</string>
    <string name="title_home6">Learn with us now</string>
    <string name="title_explore1">Design MasterClass 1</string>
    <string name="title_explore2">Business MasterClass 2</string>
    <string name="title_explore3">Hacking 101</string>
    <string name="title_explore4">Security Systems</string>
    <string name="title_explore5">UI/UX 101</string>
    <string name="view_title_explore">VIEW</string>
    <string name="category_explore1">Design</string>
    <string name="category_explore2">Business</string>
    <string name="category_explore3">Hacking</string>
    <string name="category_explore4">Hacking</string>
    <string name="category_explore5">Design</string>
    <string name="explorer">Explorer</string>
    <string name="editor_choice">Editor Choice</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="setting_my_account">My Account</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_activity_history">Activity History</string>
    <string name="setting_billing_and_payment">Billing and Payment</string>
    <string name="setting_security_and_privacy">Security and Privacy</string>
    <string name="setting_help">Help</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="my_courses">My Courses</string>
    <string name="add">Add</string>
    <string name="course_category">Category:</string>
    <string name="course_before_sale_price">Before sale price: $</string>
    <string name="course_after_sale_price">After sale price: $</string>
    <string name="course_rate">Rate:</string>
    <string name="collectionItemStudy">STUDYING</string>
    <string name="collectionItemCollection">COLLECTION</string>
    <string name="collectionItemBadge">BADGE</string>
</resources>