<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Setting.Setting"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/text"
            android:textSize="22sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/pt_sans_bold"/>
        <TextView
            android:id="@+id/setting_my_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_my_account"
            android:textColor="@color/text"
            android:fontFamily="@font/pt_sans_bold"
            android:textSize="16sp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_field"
            android:drawableLeft="@drawable/ic_baseline_account_box_24"
            android:drawablePadding="15dp"/>
        <TextView
            android:id="@+id/setting_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_notifications"
            android:textColor="@color/text"
            android:fontFamily="@font/pt_sans_bold"
            android:textSize="16sp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_field"
            android:drawableLeft="@drawable/ic_outline_notifications_none_24"
            android:drawablePadding="15dp"/>
        <TextView
            android:id="@+id/setting_activity_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_activity_history"
            android:textColor="@color/text"
            android:fontFamily="@font/pt_sans_bold"
            android:textSize="16sp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_field"
            android:drawableLeft="@drawable/ic_baseline_timer_24"
            android:drawablePadding="15dp"/>
        <TextView
            android:id="@+id/setting_billing_and_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_billing_and_payment"
            android:textColor="@color/text"
            android:fontFamily="@font/pt_sans_bold"
            android:textSize="16sp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_field"
            android:drawableLeft="@drawable/ic_baseline_credit_card_24"
            android:drawablePadding="15dp"/>
        <TextView
            android:id="@+id/setting_security_and_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_security_and_privacy"
            android:textColor="@color/text"
            android:fontFamily="@font/pt_sans_bold"
            android:textSize="16sp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_field"
            android:drawableLeft="@drawable/ic_outline_lock_24"
            android:drawablePadding="15dp"/>
        <TextView
            android:id="@+id/setting_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_help"
            android:textColor="@color/text"
            android:fontFamily="@font/pt_sans_bold"
            android:textSize="16sp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/text_field"
            android:drawableLeft="@drawable/ic_baseline_help_outline_24"
            android:drawablePadding="15dp"/>
        <Button
            android:id="@+id/sign_out_btn"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/sign_out_btn"
            android:layout_gravity="center"
            android:fontFamily="@font/pt_sans_regular"/>
    </LinearLayout>


</RelativeLayout>