<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Authentication.NewAccount"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_btn_new_account"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/baseline_arrow_back_ios_new_black_24dp"
            android:layout_marginStart="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/new_account"
                android:textColor="@color/text"
                android:textSize="22sp"
                android:fontFamily="@font/pt_sans_bold" />
            <RadioGroup
                android:id="@+id/toggle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="140dp"
                android:background="@drawable/orange_out_line"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:id="@+id/english_lan"
                    android:background="@drawable/toggle_widget_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/english_lan"
                    android:textColor="@color/white" />

                <RadioButton
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:id="@+id/vietnamese_lan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/vietnamese_lan"
                    android:textColor="@color/white" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/enter_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/enter_your_email_address_below"
            android:layout_marginStart="15dp" />

        <EditText
            android:id="@+id/enter_email_field"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_marginTop="120dp"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:background="@drawable/text_field"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_field_log_in"
            android:fontFamily="@font/pt_sans_regular"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/sign_in_if_exists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/orange_400"
            android:fontFamily="@font/pt_sans_bold"
            android:background="@drawable/selector"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/new_account_continue_btn"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/continue_btn">
        </Button>

    </LinearLayout>

</RelativeLayout>