<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Authentication.Verification"
    android:background="@color/grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingClass">

        <Button
            android:id="@+id/back_btn_verification"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/baseline_arrow_back_ios_new_black_24dp"/>

        <TextView
            android:id="@+id/verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/verification"
            android:textSize="22sp"
            android:textColor="@color/text"
            android:fontFamily="@font/pt_sans_bold"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/enter_phone_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/pt_sans_regular"
            android:text="@string/enter_phone_verification"
            android:layout_marginStart="20dp" />

        <LinearLayout
            android:id="@+id/otp_full_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="100dp">
            <EditText
                android:id="@+id/code_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/text_field"
                android:fontFamily="@font/pt_sans_regular"
                android:textColor="@color/text"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:layout_marginHorizontal="2dp">
            </EditText>

            <EditText
                android:id="@+id/code_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/text_field"
                android:fontFamily="@font/pt_sans_regular"
                android:textColor="@color/text"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:layout_marginHorizontal="2dp">
            </EditText>

            <EditText
                android:id="@+id/code_3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/text_field"
                android:fontFamily="@font/pt_sans_regular"
                android:textColor="@color/text"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:layout_marginHorizontal="2dp">
            </EditText>

            <EditText
                android:id="@+id/code_4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/text_field"
                android:fontFamily="@font/pt_sans_regular"
                android:textColor="@color/text"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:layout_marginHorizontal="2dp">
            </EditText>

            <EditText
                android:id="@+id/code_5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/text_field"
                android:fontFamily="@font/pt_sans_regular"
                android:textColor="@color/text"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:layout_marginHorizontal="2dp">
            </EditText>

            <EditText
                android:id="@+id/code_6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/text_field"
                android:fontFamily="@font/pt_sans_regular"
                android:textColor="@color/text"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"
                android:layout_marginHorizontal="2dp">
            </EditText>

        </LinearLayout>

        <TextView
            android:id="@+id/did_not_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/did_not_receive"
            android:fontFamily="@font/pt_sans_regular"/>

        <TextView
            android:id="@+id/resend_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_verification"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/orange_400"
            android:fontFamily="@font/pt_sans_bold"
            android:background="@drawable/selector"
            android:clickable="true"
            android:focusable="true" />

        <Button
            android:id="@+id/verification_continue_btn"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/continue_btn"
            android:fontFamily="@font/pt_sans_regular">

        </Button>
    </LinearLayout>
</RelativeLayout>